@@ -1,3 +1,7 @@
+2012-02-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* updatewindow.py: Added new setting for 'update-window-keep-above'.
+
 2012-02-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* updatewindow.py: Add message info when replies.
